--- a/frontend/src/app/staffs/staffs.component.html
+++ b/frontend/src/app/staffs/staffs.component.html
@@ -66,9 +66,10 @@
               </div>
               <div class="col-sm">
                 <label class="col-sm col-form-label">Роль<span class="text-danger">&nbsp;*</span></label>
-                <ng-select name="roles"
-                           [items]="roles"
+                <ng-select
+                           [multiple]="true"
                            bindValue="value"
+                           [items]="roles"
                            [(ngModel)]="formData.roles">
                 </ng-select>
               </div>
