--- a/frontend/src/app/claims/claims.component.html
+++ b/frontend/src/app/claims/claims.component.html
@@ -159,7 +159,7 @@
               <td>{{claim.fullname}}</td>
               <td><span>{{claim.phone | mask: '+0 (000) 000-0000'}}</span></td>
               <td>{{claim.email}}</td>
-              <td>{{claim.district?.value.valueRu}}</td>
+              <td>{{getDicNameByLanguage(claim, 'district')}}</td>
               <td>{{claim.numberOfRooms}}</td>
               <td>{{claim.price}}</td>
               <td></td>
