--- a/frontend/src/app/claims/create-claim/create-claim.component.scss
+++ b/frontend/src/app/claims/create-claim/create-claim.component.scss
@@ -23,3 +23,11 @@ legend {
   background-color: #ffffff;
 }
 
+.photoList {
+  border: 3px solid #000;
+  padding: 0;
+}
+
+.btn2 {
+  width: 200px!important;
+}
