--- a/frontend/src/app/claims/create-claim/show-image/show-image.component.html
+++ b/frontend/src/app/claims/create-claim/show-image/show-image.component.html
@@ -9,7 +9,7 @@
         </button>
       </div>
       <div class="modal-body">
-        <img src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(2).jpg" width="1490" height="890">
+        <img [src]="preview" width="1490" height="890">
       </div>
     </div>
   </div>
