--- a/frontend/src/app/profile/profile.component.html
+++ b/frontend/src/app/profile/profile.component.html
@@ -85,23 +85,23 @@
 
       <div class="row">
         <div class="col-sm">
-          <table class="table table-bordered text-center table-sm">
-            <thead class="text-center">
+          <table class="table table-striped table-bordered table-sm">
+            <thead>
             <tr>
-              <th>Id</th>
-              <th>Имя Фамилия</th>
-              <th>Номер тел</th>
-              <th>Цель</th>
-              <th>Статус</th>
+              <th class="th-sm">Id</th>
+              <th class="th-sm">Имя Фамилия</th>
+              <th class="th-sm">Номер тел</th>
+              <th class="th-sm">Цель</th>
+              <th class="th-sm">Статус</th>
             </tr>
             </thead>
             <tbody style="cursor: pointer">
-            <tr *ngFor="let claim of clientsData;let i = index">
-              <td>{{claim.clientId}}</td>
-              <td>{{claim.fullname}}</td>
-              <td>{{claim.phoneNumber}}</td>
-              <td>{{claim.status}}</td>
-              <td>{{claim.target[getDicNameByLanguage()]}}</td>
+            <tr *ngFor="let client of clientsData;let i = index">
+              <td>{{client.clientId}}</td>
+              <td>{{client.fullname}}</td>
+              <td>{{client.phoneNumber}}</td>
+              <td>{{client.target[getDicNameByLanguage()]}}</td>
+              <td>{{client.status[getDicNameByLanguage()]}}</td>
             </tr>
             </tbody>
           </table>
