--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -34,7 +34,7 @@
 
           <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-333" data-toggle="dropdown"
              aria-haspopup="true" aria-expanded="false">
-            <i class="fa fa-user"></i>{{currentUser.firstName}}
+            <i class="fa fa-user"></i>{{currentUser?.surname}} {{currentUser?.name}}
           </a>
           <div class="dropdown-menu dropdown-menu-right dropdown-default"
                aria-labelledby="navbarDropdownMenuLink-333">
