--- a/frontend/src/app/profile/profile.component.html
+++ b/frontend/src/app/profile/profile.component.html
@@ -14,7 +14,7 @@
         </div>
         <div class="col-sm-5">
           <h5>Специалист по недвижимости - RT554</h5>
-          <h4 class="font-weight-bolder">Иванов Иван Иванович</h4>
+          <h4 class="font-weight-bolder text-uppercase">{{currentUser?.surname}} {{currentUser?.name}}</h4>
           <p class="grey-text">последний раз был (а) 17:00 23 декабря 2019 года</p>
           <p>Группа продажи - Руководитель группы Асем Аскаровна</p>
           <p>Рабочее состояние: в отпуске с 1 января - 15 января 2019 года</p>
