--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -32,7 +32,7 @@
         </li>
         <li class="nav-item dropdown">
 
-          <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-333" data-toggle="dropdown"
+          <a class="nav-link dropdown-toggle text-uppercase" id="navbarDropdownMenuLink-333" data-toggle="dropdown"
              aria-haspopup="true" aria-expanded="false">
             <i class="fa fa-user"></i>{{currentUser?.surname}} {{currentUser?.name}}
           </a>
