--- a/frontend/src/app/profile/profile.component.html
+++ b/frontend/src/app/profile/profile.component.html
@@ -2,6 +2,13 @@
   <div class="card">
     <div class="card-body">
       <div class="row">
+        <div class="btn-group btn-breadcrumb">
+          <a href="#" class="btn btn-primary"><i class="fa fa-home"></i></a>
+          <a href="#" class="btn btn-primary active">Личный кабинет</a>
+        </div>
+      </div>
+      <br/>
+      <div class="row">
         <div class="col-sm">
           <img src="http://ssl.gstatic.com/accounts/ui/avatar_2x.png" class="avatar img-circle img-thumbnail"
                alt="avatar">
